tests/ui/traits/new-solver/overflow/exponential-trait-goals.stderr
error[E0275]: overflow evaluating the requirement `W<_>: Trait`
  --> $DIR/exponential-trait-goals.rs:17:13
   |
LL |     impls::<W<_>>();
   |             ^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`exponential_trait_goals`)
note: required by a bound in `impls`
  --> $DIR/exponential-trait-goals.rs:14:13
   |
LL | fn impls<T: Trait>() {}
   |             ^^^^^ required by this bound in `impls`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
